# RoboticArm

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  setup_env.py
emotiv_robot_arm/: __main__.py
firmware/DiegoMovements/: DiegoMovements.ino
firmware/JakeMovements/: JakeMovements.ino  State_Machine.ino
firmware/Robotic_Arm_Vihan_PlatformIO/: platformio.ini
firmware/Robotic_Arm_Vihan_PlatformIO/include/: servo_config.h
firmware/Robotic_Arm_Vihan_PlatformIO/src/: README.md  commands.cpp  main.cpp  servo_easing_test.cpp  servo_test.cpp  servo_traj_test.cpp
firmware/robot/: movements.ino  robot.ino
firmware/unit_testing/: robot.ino
neuroarm/: __main__.py  bridge.py
src/: Adrain_robotic_arm_serial_control.ino  Adrian_robot_control_OSC.py  cortex_bridge.py  main.py  tempCodeRunnerFile.py
src/emotiv_robot_arm/: bridge.py  main.py
src/signal_proc/: cortex.py
tests/: com_logging.py  websockets_connection.py
